[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
poem = "3.1.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "1.15.2"
solana-program = "2.3.0"
solana-sdk = "1.15.2"
spl-token = "8.0.0"
tokio = { version = "1.45.1", features = ["full"] }
